--- a/app/src/main/res/layout/main_item_row.xml
+++ b/app/src/main/res/layout/main_item_row.xml
@@ -4,10 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
     android:padding="8dp"
-    android:elevation="10dp"
-    app:cardCornerRadius="25dp">
+    android:layout_margin="4dp"
+    app:cardCornerRadius="20dp">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -17,8 +16,8 @@
 
         <ImageView
             android:id="@+id/img_movie"
-            android:layout_width="165dp"
-            android:layout_height="172dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
@@ -32,23 +31,29 @@
             android:id="@+id/tv_movieTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="64dp"
             android:text="@string/movie_title"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/img_movie"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="64dp"
+            android:layout_width="200dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            android:textSize="14sp"
             android:text="@string/description"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:textColor="@color/black"
+            android:ellipsize="end"
+            android:maxLines="1"
             app:layout_constraintStart_toEndOf="@+id/img_movie"
             app:layout_constraintTop_toBottomOf="@+id/tv_movieTitle" />
 
@@ -56,13 +61,24 @@
             android:id="@+id/tv_realease"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="128dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="32dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
             android:text="@string/realease"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <ImageView
+            android:id="@+id/img_arrow"
+            android:layout_width="0dp"
+            android:layout_height="41dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="32dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/img_movie" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/navigate_to_detail"
+            app:srcCompat="@drawable/arrow" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
