the process of sending arguments to the detail screen has been applied.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -21,5 +21,9 @@
         <action
             android:id="@+id/action_detailMovieFragment_to_mainMovieFragment"
             app:destination="@id/mainMovieFragment" />
+        <argument
+            android:name="movieId"
+            app:argType="com.oguzdogdu.moviedbapp.domain.model.NetworkMovie"
+            app:nullable="true" />
     </fragment>
 </navigation>
