navigation animations added

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,7 +11,12 @@
         android:label="MainMovieFragment" >
         <action
             android:id="@+id/action_mainMovieFragment_to_detailMovieFragment"
-            app:destination="@id/detailMovieFragment" />
+            app:destination="@id/detailMovieFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"
+            app:popUpToInclusive="false" />
     </fragment>
     <fragment
         android:id="@+id/detailMovieFragment"
@@ -20,7 +25,11 @@
         tools:layout="@layout/fragment_detail_movie" >
         <action
             android:id="@+id/action_detailMovieFragment_to_mainMovieFragment"
-            app:destination="@id/mainMovieFragment" />
+            app:destination="@id/mainMovieFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
         <argument
             android:name="movieId"
             app:argType="com.oguzdogdu.moviedbapp.domain.model.NetworkMovie"
