--- a/app/src/main/res/layout/main_item_row.xml
+++ b/app/src/main/res/layout/main_item_row.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8dp"
-    android:layout_margin="4dp"
-    app:cardCornerRadius="20dp">
+    android:layout_margin="4dp">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
